--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-<title>Väggtimer – helskärmsmätare</title>
+<title>Väggtimer – helskärm med mittklocka (Fire-kompatibel)</title>
 <style>
   :root{
-    /* Typo */
-    --fs-time: 240px;    /* DUBBEL storlek för nedräknaren */
-    --fs-title: 240px;   /* Samma storlek på “Tid kvar” + “Nästa” */
-    --fs-subtitle: 240px;
+    /* Typsnittsstorlekar */
+    --fs-time: 240px;   /* STOR klocka i mitten */
+    --fs-title: 36px;   /* Info nere till höger */
+    --fs-subtitle: 28px;
 
     /* Färger */
     --meter-bg: #226EB1;   /* ofylld del (hela bakgrunden) */
@@ -17,7 +17,7 @@
 
     /* UI */
     --pad: 16px;
-    --tick-w: 4px;     /* lite tjockare streck */
+    --tick-w: 4px;
   }
 
   html,body{
@@ -28,7 +28,7 @@
 
   /* HELA skärmen = mätaren */
   #meter{
-    position:fixed; inset:0;
+    position:fixed; left:0; top:0; right:0; bottom:0;  /* istället för inset:0 */
     background: var(--meter-bg);
     -webkit-tap-highlight-color: transparent;
   }
@@ -40,9 +40,9 @@
     z-index: 1;
   }
 
-  /* Vertikala tidsstreck över hela höjden – nu med tydlig z-index */
+  /* Vertikala tidsstreck över hela höjden */
   #ticks{
-    position:absolute; inset:0;
+    position:absolute; left:0; top:0; right:0; bottom:0; /* istället för inset */
     pointer-events:none;
     z-index: 5; /* ovanpå fyllnaden */
   }
@@ -53,8 +53,6 @@
     border-radius:2px;
   }
   .tick.end{ width:6px; background:#fff; }
-
-  /* Etikett under varje streck */
   .tick-label{
     position:absolute; bottom: calc(var(--pad) + 8px);
     right: -8px;
@@ -62,28 +60,29 @@
     text-shadow: 0 2px 4px rgba(0,0,0,.6);
   }
 
-  /* Overlays */
-  /* Nedre VÄNSTER: “Tid kvar” + “Nästa” – lika stora som nedräknaren */
-  #bottomLeft{
-    position:absolute; left: var(--pad); bottom: var(--pad);
-    text-align:left; z-index:10; line-height:1; max-width: 90%;
+  /* STOR NEDRÄKNARE I MITTEN */
+  #centerTime{
+    position:absolute; left:50%; top:50%;
+    transform: translate(-50%,-50%);
+    z-index: 10; text-align:center;
+    text-shadow: 0 3px 10px rgba(0,0,0,.5);
+  }
+  #time{
+    font-size: var(--fs-time); font-weight:900; letter-spacing:.4px; line-height:1;
+    white-space:nowrap;
+  }
+
+  /* NEDRE HÖGER: “Tid kvar” + “Nästa” */
+  #bottomRight{
+    position:absolute; right: var(--pad); bottom: var(--pad);
+    text-align:right; z-index:10; line-height:1.15; max-width: 90%;
     text-shadow: 0 2px 6px rgba(0,0,0,.45);
   }
   #title{
     font-size: var(--fs-title); font-weight:900; letter-spacing:.3px;
   }
   #subtitle{
-    font-size: var(--fs-subtitle); font-weight:900; opacity:.98; margin-top:8px;
-  }
-
-  /* Nedre HÖGER: nedräknaren (dubbelt så stor) */
-  #bottomRight{
-    position:absolute; right: var(--pad); bottom: var(--pad);
-    text-align:right; z-index:10; text-shadow: 0 2px 6px rgba(0,0,0,.45);
-  }
-  #time{
-    font-size: var(--fs-time); font-weight:900; letter-spacing:.4px; line-height:1;
-    white-space:nowrap;
+    font-size: var(--fs-subtitle); font-weight:800; opacity:.98; margin-top:6px;
   }
 
   /* Liten FAB för inställningar */
@@ -96,9 +95,10 @@
     box-shadow: 0 8px 24px rgba(0,0,0,.35);
   }
 
-  /* Inställningsruta (enkel för WebView 59) */
+  /* Inställningsruta (utan inset) */
   .settings{
-    position:absolute; inset:0; background:rgba(0,0,0,.92);
+    position:absolute; left:0; top:0; right:0; bottom:0;
+    background:rgba(0,0,0,.92);
     border:none; padding:20px; display:none; overflow:auto; z-index:20;
   }
   .settings h2{margin:.2em 0 .6em; font-size:1.3rem;}
@@ -121,15 +121,13 @@
     <div id="fill"></div>
     <div id="ticks"></div>
 
-    <!-- Nedre vänster: Tid kvar + Nästa (lika stora som nedräknaren) -->
-    <div id="bottomLeft">
+    <!-- Stor klocka i mitten -->
+    <div id="centerTime"><div id="time">--</div></div>
+
+    <!-- Info nere till höger -->
+    <div id="bottomRight">
       <div id="title">Tid kvar</div>
       <div id="subtitle">–</div>
-    </div>
-
-    <!-- Nedre höger: Nedräknaren -->
-    <div id="bottomRight">
-      <div id="time">--</div>
     </div>
 
     <div class="fab" id="openSettings" aria-label="Inställningar">⚙︎</div>
@@ -213,7 +211,7 @@ function pick(ps){
   return {cur:cur, nxt:nxt};
 }
 
-/* --- Ticks --- */
+/* --- Tidsstreck --- */
 var __lastTotalMin = -1;
 function chooseTickStep(totalMin){
   if (totalMin <= 120) return 30;   /* var 30:e minut upp till 2h */
@@ -283,7 +281,7 @@ function loop(){
 
   /* UI-texter */
   title.textContent = 'Tid kvar till ' + nxt.name + ' (kl ' + endH + ':' + endM + ')';
-  subtitle.textContent = 'Nästa: ' + nxt.name + ' → ' +
+  subtitle.textContent = 'Nästa: ' + nxt.name + ' \u2192 ' +
     pad2n(Math.floor(nxt.a/60)) + ':' + pad2n(nxt.a%60);
   timeEl.textContent = fmt(remain);
 
@@ -307,6 +305,7 @@ function loop(){
 /* --- Inställnings-UI --- */
 function openSettings(v){ settings.style.display = (v===false)? 'none':'block'; }
 function rowTpl(p,i){
+  /* Fix: inget p[end] – enkel och kompatibel rad */
   return '<div class="row" data-i="'+i+'">'+
     '<input type="text" value="'+p.name+'" aria-label="Namn" placeholder="Namn (t.ex. Läggdags)" />'+
     '<input type="time" value="'+p.start+'" aria-label="Start" />'+
@@ -329,7 +328,7 @@ function saveRows(){
   setPeriods(arr); renderRows(); openSettings(false);
 }
 
-$('#openSettings').addEventListener('click', function(){ renderRows(); openSettings(true); });
+document.getElementById('openSettings').addEventListener('click', function(){ renderRows(); openSettings(true); });
 var touchTimer=null;
 document.addEventListener('touchstart', function(){
   touchTimer=setTimeout(function(){ renderRows(); openSettings(true); }, 650);
@@ -337,9 +336,9 @@ document.addEventListener('touchstart', function(){
 document.addEventListener('touchend', function(){
   if(touchTimer){ clearTimeout(touchTimer); touchTimer=null; }
 }, {passive:true});
-$('#close').addEventListener('click', function(){ openSettings(false); });
-$('#save').addEventListener('click', saveRows);
-$('#add').addEventListener('click', function(){
+document.getElementById('close').addEventListener('click', function(){ openSettings(false); });
+document.getElementById('save').addEventListener('click', saveRows);
+document.getElementById('add').addEventListener('click', function(){
   var ps=getPeriods(); ps.push({name:"Ny period", start:"12:00", end:"13:00"}); setPeriods(ps); renderRows();
 });
 settings.addEventListener('click', function(e){
@@ -354,7 +353,7 @@ document.addEventListener('dblclick', function(){
 });
 
 /* --- Start --- */
-loop(); /* Allt är absolutpositionerat – ingen skalning behövs */
+loop(); /* Absolutpositionerat – ingen skalning behövs */
 </script>
 </body>
 </html>
