--- a/index.html
+++ b/index.html
@@ -3,134 +3,124 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-<title>Väggtimer – helskärm med mittklocka (Fire-kompatibel)</title>
+<title>Väggtimer – skalad scen (matchad bar)</title>
 <style>
   :root{
-    /* Typsnittsstorlekar */
-    --fs-time: 240px;   /* STOR klocka i mitten */
-    --fs-title: 36px;   /* Info nere till höger */
-    --fs-subtitle: 28px;
+    --fs-time: 220px;   /* stora siffror i design-ytan (skalning via JS) */
+    --fs-title: 3rem;   /* större rubrik */
+    --fs-subtitle: 1.4rem;
 
-    /* Färger */
-    --meter-bg: #226EB1;   /* ofylld del (hela bakgrunden) */
-    --meter-fill: #FF8811; /* fylld del */
-
-    /* UI */
-    --pad: 16px;
-    --tick-w: 4px;
+    --bar-h: 56px;            /* tjockare bar */
+    --bar-radius: 16px;       /* mer fyrkantig rundning */
+    --bar-bg: #2a2a2a;        /* ofyllda delen */
+    --bar-fill: #ffffff;      /* fyllda delen: VIT igen */
   }
 
   html,body{
     height:100%; margin:0;
-    background:#000; color:#fff; overflow:hidden;
+    background:#000;           /* svart bakgrund */
+    color:#fff; overflow:hidden;
     -webkit-text-size-adjust:100%; text-size-adjust:100%;
   }
+  body.danger{ background:#A5402D; } /* röd bakgrund sista 10 minuterna */
 
-  /* HELA skärmen = mätaren */
-  #meter{
-    position:fixed; left:0; top:0; right:0; bottom:0;  /* istället för inset:0 */
-    background: var(--meter-bg);
-    -webkit-tap-highlight-color: transparent;
+  /* === SCEN (fast design-yta 1280×800 som vi skalar/centrerar med JS) === */
+  #stage{
+    position:absolute; left:0; top:0;
+    width:1280px; height:800px;       /* DESIGNMÅTT */
+    box-sizing:border-box;
+    padding:20px;
+    display:grid;
+    grid-template-rows:auto auto 1fr auto; /* titel, undertext, klocka, track */
+    gap:12px;
+    transform-origin:0 0; will-change:transform; backface-visibility:hidden;
+    background:transparent;
   }
-  /* Fyllda delen (räknar upp i bredd) */
-  #fill{
-    position:absolute; left:0; top:0; bottom:0; width:0%;
-    background: var(--meter-fill);
+
+  .title{
+    text-align:center; font-weight:800; letter-spacing:.3px; opacity:.98;
+    font-size: var(--fs-title);
+  }
+  .subtitle{
+    text-align:center; font-weight:700; opacity:.95;
+    font-size: var(--fs-subtitle);
+  }
+  .time{
+    display:grid; place-items:center;
+    text-align:center; font-weight:900; line-height:1;
+    letter-spacing:.4px; font-size: var(--fs-time);
+    white-space:nowrap; margin-bottom:8px;
+  }
+
+  /* === Track (bar + ticks) ===
+     Längden sätts i JS för att matcha .time exakt; centrerad med margin:auto. */
+  .track{
+    position:relative;
+    margin: 0 auto;   /* centrerad */
+    padding: 0;       /* ingen sid-padding – bar = exakt samma längd som tids-texten */
+    width: 900px;     /* initial, ersätts av JS */
+  }
+  .bar{
+    position:relative;
+    height: var(--bar-h);
+    background: var(--bar-bg);
+    border-radius: var(--bar-radius);
+    overflow:hidden;
+    box-shadow: inset 0 0 0 1px rgba(255,255,255,.06);
+  }
+  .fill{
+    position:absolute;
+    left:0; top:0; bottom:0;   /* WebView 59-kompatibelt */
+    height:100%;
+    width:0%;
+    background: var(--bar-fill);       /* VIT */
+    border-radius: inherit;
     transform: translateZ(0);
-    z-index: 1;
   }
 
-  /* Vertikala tidsstreck över hela höjden */
-  #ticks{
-    position:absolute; left:0; top:0; right:0; bottom:0; /* istället för inset */
-    pointer-events:none;
-    z-index: 5; /* ovanpå fyllnaden */
-  }
-  .tick{
-    position:absolute; top:0; bottom:0; width: var(--tick-w);
-    margin-left: calc(var(--tick-w) * -0.5);
-    background: rgba(255,255,255,0.95);
-    border-radius:2px;
-  }
-  .tick.end{ width:6px; background:#fff; }
-  .tick-label{
-    position:absolute; bottom: calc(var(--pad) + 8px);
-    right: -8px;
-    font-size: 22px; font-weight: 900; white-space:nowrap;
-    text-shadow: 0 2px 4px rgba(0,0,0,.6);
-  }
+  .ticks{ position:relative; height: 52px; }
+  .tick{ position:absolute; top:0; transform:translateX(-50%); text-align:center; }
+  .tick i{ display:block; width:3px; height:24px; background:rgba(255,255,255,.95);
+           margin:0 auto 6px; border-radius:2px; }
+  .tick span{ font-size:1.15rem; opacity:.98; font-weight:700; }
+  .tick.end i{ width:4px; height:28px; background:#fff; }
+  .tick.end span{ font-weight:900; }
 
-  /* STOR NEDRÄKNARE I MITTEN */
-  #centerTime{
-    position:absolute; left:50%; top:50%;
-    transform: translate(-50%,-50%);
-    z-index: 10; text-align:center;
-    text-shadow: 0 3px 10px rgba(0,0,0,.5);
-  }
-  #time{
-    font-size: var(--fs-time); font-weight:900; letter-spacing:.4px; line-height:1;
-    white-space:nowrap;
-  }
-
-  /* NEDRE HÖGER: “Tid kvar” + “Nästa” */
-  #bottomRight{
-    position:absolute; right: var(--pad); bottom: var(--pad);
-    text-align:right; z-index:10; line-height:1.15; max-width: 90%;
-    text-shadow: 0 2px 6px rgba(0,0,0,.45);
-  }
-  #title{
-    font-size: var(--fs-title); font-weight:900; letter-spacing:.3px;
-  }
-  #subtitle{
-    font-size: var(--fs-subtitle); font-weight:800; opacity:.98; margin-top:6px;
-  }
-
-  /* Liten FAB för inställningar */
+  /* Settings-knappen: övre högra hörnet */
   .fab{
-    position:absolute; left: var(--pad); top: var(--pad);
-    width:56px; height:56px; z-index:12;
+    position:absolute; right:16px; top:16px;
+    width:64px; height:64px; z-index:10;
     border-radius:999px; display:grid; place-items:center;
-    background: rgba(0,0,0,.35); color:#fff; border:1px solid rgba(255,255,255,.15);
+    background:#151515; color:#fff; border:1px solid #2a2a2a;
     font-size:20px; user-select:none; cursor:pointer; touch-action:manipulation;
-    box-shadow: 0 8px 24px rgba(0,0,0,.35);
+    box-shadow: 0 8px 24px rgba(0,0,0,.4);
   }
 
-  /* Inställningsruta (utan inset) */
   .settings{
-    position:absolute; left:0; top:0; right:0; bottom:0;
-    background:rgba(0,0,0,.92);
+    position:absolute; inset:0; background:rgba(0,0,0,.94);
     border:none; padding:20px; display:none; overflow:auto; z-index:20;
   }
-  .settings h2{margin:.2em 0 .6em; font-size:1.3rem;}
-  .row{display:block; margin:.5em 0;}
-  .row input{
-    width: 31%; min-width: 180px; margin-right:8px;
-    padding:.8em .9em; border-radius:12px; border:1px solid #2a2a2a;
-    background:#0d0d0d; color:#fff; font-size:1rem;
-  }
+  .settings h2{margin:.2em 0 .6em; font-size:1.375rem;}
+  .row{display:grid; grid-template-columns:1.2fr 1fr 1fr auto; gap:10px; align-items:center; margin:.5em 0;}
+  .row input{ padding:.8em .9em; border-radius:12px; border:1px solid #2a2a2a; background:#0d0d0d; color:#fff; font-size:1rem;}
   .settings .actions{display:flex; gap:12px; margin-top:10px; flex-wrap:wrap;}
-  .settings button{
-    padding:.9em 1.1em; min-height:48px; border-radius:12px;
-    border:1px solid #2a2a2a; background:#101010; color:#fff;
-    font-weight:700; cursor:pointer; font-size:1rem;
-  }
+  .settings button{ padding:.9em 1.1em; min-height:48px; border-radius:12px; border:1px solid #2a2a2a; background:#101010; color:#fff; font-weight:700; cursor:pointer; font-size:1rem;}
 </style>
 </head>
 <body>
-  <div id="meter">
-    <div id="fill"></div>
-    <div id="ticks"></div>
+  <div id="stage">
+    <div class="title" id="title">Tid kvar</div>
+    <div class="subtitle" id="subtitle">–</div>
 
-    <!-- Stor klocka i mitten -->
-    <div id="centerTime"><div id="time">--</div></div>
+    <div class="time" id="time">--</div>
 
-    <!-- Info nere till höger -->
-    <div id="bottomRight">
-      <div id="title">Tid kvar</div>
-      <div id="subtitle">–</div>
+    <div class="track" id="track">
+      <div class="bar" id="bar"><div class="fill" id="fill"></div></div>
+      <div class="ticks" id="ticks"></div>
     </div>
 
     <div class="fab" id="openSettings" aria-label="Inställningar">⚙︎</div>
+
     <div class="settings" id="settings">
       <h2>Perioder</h2>
       <p>Lägg till tidsperioder för dygnet. Timern väljer automatiskt den period som matchar klockslaget och räknar ner till periodens slut.</p>
@@ -147,9 +137,8 @@
 <script>
 /* --- Selektorer --- */
 var $ = function(s){ return document.querySelector(s); };
-var title=$('#title'), subtitle=$('#subtitle'), timeEl=$('#time');
-var fill=$('#fill'), ticks=$('#ticks');
-var settings=$('#settings');
+var title=$('#title'), subtitle=$('#subtitle'), timeEl=$('#time'), fill=$('#fill'), ticks=$('#ticks');
+var settings=$('#settings'), stage=$('#stage'), track=$('#track');
 
 /* --- Perioddata --- */
 var DEFAULT_PERIODS = [
@@ -179,7 +168,7 @@ function fmt(ms){
   return h+'h '+m+'m '+pad2(s)+'s';
 }
 
-/* --- Splitta över midnatt & välj period (WebView 59-vänligt) --- */
+/* --- Splitta över midnatt & välj period (Chrome 59-vänligt) --- */
 function expand(ps){
   var out=[];
   for(var i=0;i<ps.length;i++){
@@ -211,41 +200,32 @@ function pick(ps){
   return {cur:cur, nxt:nxt};
 }
 
-/* --- Tidsstreck --- */
-var __lastTotalMin = -1;
+/* --- Ticks --- */
 function chooseTickStep(totalMin){
-  if (totalMin <= 120) return 30;   /* var 30:e minut upp till 2h */
-  if (totalMin <= 480) return 60;   /* var timme upp till 8h */
-  return 120;                       /* därefter varannan timme */
+  if (totalMin <= 120) return 30;
+  if (totalMin <= 480) return 60;
+  return 120;
 }
 function fmtTick(mins){
   if (mins % 60 === 0) return (mins/60)+'h';
   return (mins%60)+'m';
 }
-function clearTicks(){ ticks.innerHTML=''; }
 function drawTicks(totalMin){
-  if (totalMin === __lastTotalMin) return; /* rita bara om när periodlängden ändras */
-  __lastTotalMin = totalMin;
-  clearTicks();
+  ticks.innerHTML='';
   var step = chooseTickStep(totalMin);
+  /* Viktigt: rita inte ett tick vid exakt totalMin (annars krockar det med "slut") */
   for(var at=0; at<totalMin; at+=step){
-    var pct = (at/totalMin)*100;
-    var t = document.createElement('div');
-    t.className = 'tick';
-    t.style.left = pct + '%';
-    var lab = document.createElement('div');
-    lab.className = 'tick-label';
-    lab.textContent = fmtTick(at);
-    t.appendChild(lab);
-    ticks.appendChild(t);
+    var left = (at/totalMin)*100;
+    var div = document.createElement('div');
+    div.className='tick';
+    div.style.left = left+'%';
+    div.innerHTML = '<i></i><span>'+fmtTick(at)+'</span>';
+    ticks.appendChild(div);
   }
   var end = document.createElement('div');
   end.className = 'tick end';
   end.style.left = '100%';
-  var labEnd = document.createElement('div');
-  labEnd.className = 'tick-label';
-  labEnd.textContent = 'slut';
-  end.appendChild(labEnd);
+  end.innerHTML = '<i></i><span>slut</span>';
   ticks.appendChild(end);
 }
 
@@ -262,13 +242,40 @@ function beep(ms, freq){
   }catch(e){}
 }
 
+/* === SCEN-SKALNING (fix för WebView 59) === */
+var BASE_W = 1280, BASE_H = 800;
+var __lastScale = 1;
+function applyScale(){
+  var ww=Math.max(100, window.innerWidth  || document.documentElement.clientWidth  || 0);
+  var wh=Math.max(100, window.innerHeight || document.documentElement.clientHeight || 0);
+  var s=Math.min(ww/BASE_W, wh/BASE_H);
+  s=Math.max(0.1,Math.min(4,s));
+  var x=(ww-BASE_W*s)/2;
+  var y=(wh-BASE_H*s)/2;
+  stage.style.transform='translate('+x+'px,'+y+'px) scale('+s+')';
+  __lastScale = s;
+}
+window.addEventListener('resize', applyScale);
+window.addEventListener('orientationchange', applyScale);
+
+/* === Matcha barens längd med nedräknarens text === */
+var __trackW = 0;
+function sizeTrackToTime(){
+  var rect = timeEl.getBoundingClientRect();
+  var wViewport = rect.width || 900;
+  var wDesign = Math.max(300, Math.min(BASE_W, Math.round(wViewport / (__lastScale||1))));
+  if (Math.abs(wDesign - __trackW) > 2){   /* undvik jitter */
+    track.style.width = wDesign + 'px';
+    __trackW = wDesign;
+  }
+}
+
 /* --- Huvudloop --- */
 function pad2n(n){ return (n<10?'0':'')+n; }
 function loop(){
   var ps=getPeriods();
   var picked = pick(ps);
   var cur=picked.cur, nxt=picked.nxt;
-
   var n = new Date();
   var nMin = n.getHours()*60 + n.getMinutes() + n.getSeconds()/60;
   var total = (cur.b - cur.a) * 60 * 1000;
@@ -279,20 +286,25 @@ function loop(){
   var endH = pad2n(Math.floor(endMin/60));
   var endM = pad2n(endMin%60);
 
-  /* UI-texter */
+  /* titel + undertext */
   title.textContent = 'Tid kvar till ' + nxt.name + ' (kl ' + endH + ':' + endM + ')';
   subtitle.textContent = 'Nästa: ' + nxt.name + ' \u2192 ' +
     pad2n(Math.floor(nxt.a/60)) + ':' + pad2n(nxt.a%60);
+
   timeEl.textContent = fmt(remain);
 
-  /* Fyllnadsgrad (räknar upp) */
   var pct = total>0 ? Math.min(100, Math.max(0, (passed/total)*100)) : 100;
   fill.style.width = pct + '%';
 
-  /* Rita/uppdatera ticks när periodlängd ändras */
   drawTicks((cur.b - cur.a));
 
-  /* Pipljud när den går i mål */
+  /* röd bakgrund vid ≤ 10 min */
+  if (remain <= 10 * 60 * 1000) { document.body.classList.add('danger'); }
+  else { document.body.classList.remove('danger'); }
+
+  /* uppdatera track-bredden så den följer texten */
+  sizeTrackToTime();
+
   if(remain<=1000 && remain>0){
     for(var i=0;i<5;i++){
       (function(k){ setTimeout(function(){ beep(120, 1000+k*60); }, k*180); })(i);
@@ -305,7 +317,6 @@ function loop(){
 /* --- Inställnings-UI --- */
 function openSettings(v){ settings.style.display = (v===false)? 'none':'block'; }
 function rowTpl(p,i){
-  /* Fix: inget p[end] – enkel och kompatibel rad */
   return '<div class="row" data-i="'+i+'">'+
     '<input type="text" value="'+p.name+'" aria-label="Namn" placeholder="Namn (t.ex. Läggdags)" />'+
     '<input type="time" value="'+p.start+'" aria-label="Start" />'+
@@ -328,7 +339,7 @@ function saveRows(){
   setPeriods(arr); renderRows(); openSettings(false);
 }
 
-document.getElementById('openSettings').addEventListener('click', function(){ renderRows(); openSettings(true); });
+$('#openSettings').addEventListener('click', function(){ renderRows(); openSettings(true); });
 var touchTimer=null;
 document.addEventListener('touchstart', function(){
   touchTimer=setTimeout(function(){ renderRows(); openSettings(true); }, 650);
@@ -336,9 +347,10 @@ document.addEventListener('touchstart', function(){
 document.addEventListener('touchend', function(){
   if(touchTimer){ clearTimeout(touchTimer); touchTimer=null; }
 }, {passive:true});
-document.getElementById('close').addEventListener('click', function(){ openSettings(false); });
-document.getElementById('save').addEventListener('click', saveRows);
-document.getElementById('add').addEventListener('click', function(){
+
+$('#close').addEventListener('click', function(){ openSettings(false); });
+$('#save').addEventListener('click', saveRows);
+$('#add').addEventListener('click', function(){
   var ps=getPeriods(); ps.push({name:"Ny period", start:"12:00", end:"13:00"}); setPeriods(ps); renderRows();
 });
 settings.addEventListener('click', function(e){
@@ -347,13 +359,15 @@ settings.addEventListener('click', function(e){
   var ps=getPeriods(); ps.splice(+idx,1); setPeriods(ps); renderRows();
 });
 
-/* Dubbeltapp för helskärm (om stöds) */
+/* Dubbeltryck för helskärm (om stöds) */
 document.addEventListener('dblclick', function(){
   var el=document.documentElement; if(el.requestFullscreen) el.requestFullscreen();
 });
 
 /* --- Start --- */
-loop(); /* Absolutpositionerat – ingen skalning behövs */
+applyScale();
+sizeTrackToTime();
+loop();
 </script>
 </body>
 </html>
