--- a/index.html
+++ b/index.html
@@ -6,32 +6,32 @@
 <title>Väggtimer – skalad scen (matchad bar)</title>
 <style>
   :root{
-    --fs-time: 220px;
-    --fs-title: 3rem;
+    --fs-time: 220px;   /* stora siffror i design-ytan (skalning via JS) */
+    --fs-title: 3rem;   /* större rubrik */
     --fs-subtitle: 1.4rem;
 
-    --bar-h: 56px;
-    --bar-radius: 16px;
-    --bar-bg: #2a2a2a;
-    --bar-fill: #ffffff;
+    --bar-h: 56px;            /* tjockare bar */
+    --bar-radius: 16px;       /* mer fyrkantig rundning */
+    --bar-bg: #2a2a2a;        /* ofyllda delen */
+    --bar-fill: #ffffff;      /* fyllda delen */
   }
 
   html,body{
     height:100%; margin:0;
-    background:#000;
+    background:#000;           /* svart bakgrund */
     color:#fff; overflow:hidden;
     -webkit-text-size-adjust:100%; text-size-adjust:100%;
   }
-  body.danger{ background:#A5402D; }
+  body.danger{ background:#A5402D; } /* bakgrund sista 10 minuterna */
 
-  /* === SCEN (1280×800, skalas via JS) === */
+  /* === SCEN (fast design-ytan 1280×800 som skalas/centreras) === */
   #stage{
     position:absolute; left:0; top:0;
-    width:1280px; height:800px;
+    width:1280px; height:800px;       /* DESIGNMÅTT */
     box-sizing:border-box;
     padding:20px;
     display:grid;
-    grid-template-rows:auto auto 1fr auto;
+    grid-template-rows:auto auto 1fr auto; /* titel, undertext, klocka, track */
     gap:12px;
     transform-origin:0 0; will-change:transform; backface-visibility:hidden;
     background:transparent;
@@ -52,11 +52,12 @@
     white-space:nowrap; margin-bottom:8px;
   }
 
+  /* === Track (bar + ticks) === */
   .track{
     position:relative;
-    margin: 0 auto;
-    padding: 0;
-    width: 900px; /* sätts via JS */
+    margin: 0 auto;   /* centrerad */
+    padding: 0;       /* ingen sid-padding – bar = exakt samma längd som tids-texten */
+    width: 900px;     /* initial, ersätts av JS */
   }
   .bar{
     position:relative;
@@ -68,7 +69,7 @@
   }
   .fill{
     position:absolute;
-    left:0; top:0; bottom:0;
+    left:0; top:0; bottom:0;   /* WebView 59-kompatibelt */
     height:100%;
     width:0%;
     background: var(--bar-fill);
@@ -84,7 +85,7 @@
   .tick.end i{ width:4px; height:28px; background:#fff; }
   .tick.end span{ font-weight:900; }
 
-  /* Settings-knappen */
+  /* Settings-knappen: övre högra hörnet */
   .fab{
     position:absolute; right:16px; top:16px;
     width:64px; height:64px; z-index:10;
@@ -94,7 +95,7 @@
     box-shadow: 0 8px 24px rgba(0,0,0,.4);
   }
 
-  /* === INSTÄLLNINGAR – flyttad UTANFÖR den skalade scenen === */
+  /* === INSTÄLLNINGAR – UTANFÖR den skalade scenen === */
   .settings{
     position:fixed; inset:0; background:rgba(0,0,0,.94);
     border:none; padding:20px; display:none; overflow:auto; z-index:9999;
@@ -121,14 +122,15 @@
     <div class="fab" id="openSettings" aria-label="Inställningar">⚙︎</div>
   </div>
 
-  <!-- SETTINGS FLYTTAD HIT, UTANFÖR #stage -->
-  <div class="settings" id="settings">
+  <!-- INSTÄLLNINGAR (utanför #stage för att undvika transform-buggar på äldre WebView) -->
+  <div class="settings" id="settings" aria-modal="true" role="dialog">
     <h2>Perioder</h2>
     <p>Lägg till tidsperioder för dygnet. Timern väljer automatiskt den period som matchar klockslaget och räknar ner till periodens slut.</p>
     <div id="rows"></div>
     <div class="actions">
       <button id="add">+ Lägg till period</button>
       <button id="save">Spara</button>
+      <button id="reset">Återställ standard</button>
       <button id="close">Stäng</button>
     </div>
     <p><small>Tips: Kör i helskärm. Allt sparas lokalt i webbläsaren.</small></p>
@@ -140,7 +142,7 @@ var $ = function(s){ return document.querySelector(s); };
 var title=$('#title'), subtitle=$('#subtitle'), timeEl=$('#time'), fill=$('#fill'), ticks=$('#ticks');
 var settings=$('#settings'), stage=$('#stage'), track=$('#track');
 
-/* --- Perioddata --- */
+/* --- Perioddata (implementerar dina tider) --- */
 var DEFAULT_PERIODS = [
   { name:"Morgon",      start:"06:30", end:"08:00" },
   { name:"Förmiddag",   start:"08:00", end:"12:00" },
@@ -150,6 +152,7 @@ var DEFAULT_PERIODS = [
   { name:"Kvällsrutin", start:"22:15", end:"22:30" },
   { name:"Natt",        start:"22:30", end:"06:30" }
 ];
+
 function getPeriods(){
   try{
     var r=localStorage.getItem('walltimer.periods');
@@ -170,7 +173,7 @@ function fmt(ms){
   return h+'h '+m+'m '+pad2(s)+'s';
 }
 
-/* --- Splitta över midnatt & välj period --- */
+/* --- Splitta över midnatt & välj period (Chrome/WebView 59-vänligt) --- */
 function expand(ps){
   var out=[];
   for(var i=0;i<ps.length;i++){
@@ -215,6 +218,7 @@ function fmtTick(mins){
 function drawTicks(totalMin){
   ticks.innerHTML='';
   var step = chooseTickStep(totalMin);
+  /* rita ej tick vid exakt totalMin (reserv för "slut") */
   for(var at=0; at<totalMin; at+=step){
     var left = (at/totalMin)*100;
     var div = document.createElement('div');
@@ -243,7 +247,7 @@ function beep(ms, freq){
   }catch(e){}
 }
 
-/* === SCEN-SKALNING === */
+/* === SCEN-SKALNING (fix för WebView 59) === */
 var BASE_W = 1280, BASE_H = 800;
 var __lastScale = 1;
 function applyScale(){
@@ -265,7 +269,7 @@ function sizeTrackToTime(){
   var rect = timeEl.getBoundingClientRect();
   var wViewport = rect.width || 900;
   var wDesign = Math.max(300, Math.min(BASE_W, Math.round(wViewport / (__lastScale||1))));
-  if (Math.abs(wDesign - __trackW) > 2){
+  if (Math.abs(wDesign - __trackW) > 2){   /* undvik jitter */
     track.style.width = wDesign + 'px';
     __trackW = wDesign;
   }
@@ -287,6 +291,7 @@ function loop(){
   var endH = pad2n(Math.floor(endMin/60));
   var endM = pad2n(endMin%60);
 
+  /* titel + undertext */
   title.textContent = 'Tid kvar till ' + nxt.name + ' (kl ' + endH + ':' + endM + ')';
   subtitle.textContent = 'Nästa: ' + nxt.name + ' \u2192 ' +
     pad2n(Math.floor(nxt.a/60)) + ':' + pad2n(nxt.a%60);
@@ -298,9 +303,11 @@ function loop(){
 
   drawTicks((cur.b - cur.a));
 
+  /* bakgrund vid ≤ 10 min */
   if (remain <= 10 * 60 * 1000) { document.body.classList.add('danger'); }
   else { document.body.classList.remove('danger'); }
 
+  /* uppdatera track-bredden så den följer texten */
   sizeTrackToTime();
 
   if(remain<=1000 && remain>0){
@@ -313,9 +320,7 @@ function loop(){
 }
 
 /* --- Inställnings-UI --- */
-function openSettings(v){
-  settings.style.display = (v===false)? 'none':'block';
-}
+function openSettings(v){ settings.style.display = (v===false)? 'none':'block'; }
 function rowTpl(p,i){
   return '<div class="row" data-i="'+i+'">'+
     '<input type="text" value="'+p.name+'" aria-label="Namn" placeholder="Namn (t.ex. Läggdags)" />'+
@@ -339,6 +344,7 @@ function saveRows(){
   setPeriods(arr); renderRows(); openSettings(false);
 }
 
+/* Öppna via knapp */
 $('#openSettings').addEventListener('click', function(){ renderRows(); openSettings(true); });
 
 /* Långtryck för att öppna – men INTE om man trycker i ett input */
@@ -352,11 +358,20 @@ document.addEventListener('touchend', function(){
   if(touchTimer){ clearTimeout(touchTimer); touchTimer=null; }
 }, {passive:true});
 
+/* Knappar i dialogen */
 $('#close').addEventListener('click', function(){ openSettings(false); });
 $('#save').addEventListener('click', saveRows);
 $('#add').addEventListener('click', function(){
   var ps=getPeriods(); ps.push({name:"Ny period", start:"12:00", end:"13:00"}); setPeriods(ps); renderRows();
 });
+$('#reset').addEventListener('click', function(){
+  if (confirm('Återställ perioderna till standard? Dina egna ändringar ersätts.')) {
+    setPeriods(DEFAULT_PERIODS);
+    renderRows();
+  }
+});
+
+/* Ta bort-raden (delegera klick) */
 settings.addEventListener('click', function(e){
   var el=e.target; if(!el || !el.getAttribute) return;
   var idx=el.getAttribute('data-del'); if(idx==null) return;
